--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body {
   background-color: #f2f2f2;
   font-family: "Lato"; /* OPTIONAL: Google Fonts - base font */
@@ -70,12 +74,12 @@ a:after {
 /* Header Wrap */
 .header {
   background: #1CBCAD;
-  background: url(../images/header-bg.jpg) no-repeat center top;
+  background: url(../images/header-bg-2.jpg) no-repeat center top;
   padding-top:140px;
   text-align:center;
   background-attachment: relative;
   background-position: center center;
-  min-height: 500px;
+  min-height: 400px;
   width: 100%;
   
   -webkit-background-size: 100%;
@@ -93,6 +97,7 @@ a:after {
   font-size: 80px;
   color: white;
   background: rgba(0,0,0,0.2);
+  border-radius: 10px;
 }
 
 .header h3 {
@@ -108,7 +113,7 @@ a:after {
 .about {
   background: #2c3e50;
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   color: white;
 } 
 
@@ -126,7 +131,7 @@ a:after {
 .footer {
   background: #2f2f2f;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
 }
 
 .footer p {
